--- a/client/src/assets/styles/base-table.css
+++ b/client/src/assets/styles/base-table.css
@@ -12,33 +12,28 @@
 }
 
 .table-container {
-  height: 550px;
-  position: relative;
-  border: 0px solid #dee2e6;
-  border-radius: 4px;
-  overflow: hidden;
+  padding-left: 1px;
+  max-height: 550px;
+  overflow-y: auto; /* 컨텐츠가 많을 때만 스크롤 */
 }
 
 .table {
-  margin: 0;
-  border-collapse: collapse;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  border: 1px solid #dee2e6;
-  border-top: 1px solid #dee2e6;
+  width: 100%;
+  table-layout: fixed;
 }
 
 /* thead 설정 */
 .table thead {
-  flex: 0 0 auto;
-  width: 100%;
+  position: sticky;
+  top: 0;
+  background: #f8f9fa;
+  z-index: 2;
 }
 
 .table thead tr {
   display: flex;
   width: 100%;
-  border-top: 0px solid #dee2e6;
+  border-top: 1px solid #dee2e6;
 }
 
 .table thead th {
@@ -55,12 +50,12 @@
 
 .table tbody tr td:last-child,
 .table thead tr th:last-child {
-  border-right: none;
+  border-right: 1px solid #dee2e6;
 }
 
 .table tbody tr td:first-child,
 .table thead tr th:first-child {
-  border-left: none;
+  border-left: 1px solid #dee2e6;
 }
 
 /* 테두리 설정 */
@@ -74,9 +69,7 @@
 
 /* tbody 설정 */
 .table tbody {
-  flex: 1 1 auto;
   display: block;
-  overflow-y: scroll;
 }
 
 .table tbody tr {
@@ -102,7 +95,10 @@
   display: flex;
   align-items: center;
   width: inherit;
+  justify-content: center; /* 가로 중앙 정렬 */
+  text-align: center; /* 텍스트 중앙 정렬 */
 }
+
 
 /* 테이블 열 너비 설정 */
 .w-10 { width: 10% !important; }
