--- a/client/src/assets/styles/base-table.css
+++ b/client/src/assets/styles/base-table.css
@@ -12,7 +12,7 @@
 }
 
 .table-container {
-  padding-left: 1px;
+  /* padding-left: 1px; */
   max-height: 550px;
   overflow-y: auto; /* 컨텐츠가 많을 때만 스크롤 */
 }
